[gd_scene load_steps=3 format=3 uid="uid://dlky14okx6yah"]

[ext_resource type="Script" path="res://scripts/ui/ControlsPopup.gd" id="1_rlyhi"]
[ext_resource type="Texture2D" uid="uid://6417y5sormcv" path="res://assets/ui/controls-popup.aseprite" id="2_dmm1u"]

[node name="ControlsPopup" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rlyhi")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_dmm1u")

[node name="CloseButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = -64.0
offset_right = 112.0
offset_bottom = -16.0
grow_vertical = 0
text = "Close"

[node name="AdvancedButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = -144.0
offset_right = 113.0
offset_bottom = -89.0
grow_vertical = 0
text = "Advanced...
"

[connection signal="gui_input" from="CloseButton" to="." method="_on_close_button_gui_input"]
[connection signal="pressed" from="CloseButton" to="." method="_on_close_button_pressed"]
[connection signal="gui_input" from="AdvancedButton" to="." method="_on_advanced_button_gui_input"]
[connection signal="pressed" from="AdvancedButton" to="." method="_on_advanced_button_pressed"]
